tests/machine/x/c/group_by_sort.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by_sort.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by_sort.c:40:30: error: invalid initializer
   40 |   list_groupedItem grouped = 0;
      |                              ^
/workspace/mochi/tests/machine/x/c/group_by_sort.c:41:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘list_groupedItem’ [-Wformat=]
   41 |   printf("%d\n", grouped);
      |           ~^     ~~~~~~~
      |            |     |
      |            int   list_groupedItem

   1: #include <stdio.h>
